# Stroke-Prediction-Using-Machine-Learning-Models

./: README.md  pyproject.toml
ModelsResultsFiles/: ModelsResults_2PCA.csv  ModelsResults_8PCA.csv  ModelsResults_AllFeatures.csv
src/: config.py  logger.py  main.py  models.py  pipeline.py
src/FeatureAnalysis/: balancing.py  feature_analysis.py  visualization.py
src/Preprocessing/: preprocessing.py  visualization.py
tests/: test_preprocessing.py
