[tool.poetry]
name = "Stroke Prediction Using Machine Learning Models"
version = "0.1.0"
description = "A project replicating machine learning models for stroke prediction."
authors = ["Amit Davidpur <amitdavidpur@gmail.com>", "Meshi Ben Oz <meshibenoz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
matplotlib = "*"
seaborn = "*"
numpy = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
